--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -21,15 +21,23 @@ body {
 
 .account {
   display: flex;
-  margin-bottom: 4rem;
+  margin: 0 0 40px 0;
 }
 
-.account__title {
+.title {
   font-size: 18px;
   font-weight: 600;
   width: 250px;
-  margin: 0;
+  margin: 0 20px 0 0;
   padding: 0;
+}
+
+.account__content {
+  width: 490px;
+}
+
+.account__fields {
+  width: 370px;
 }
 
 .row {
@@ -37,7 +45,7 @@ body {
   display: flex;
 }
 
-input {
+.input-field {
   background: #fff;
   border: 1px solid #e1e1e3;
   border-radius: 3px;
@@ -73,4 +81,94 @@ small {
   font-size: 12px;
   margin-top: 5px;
   font-weight: 400;
+}
+
+.notification-settings {
+  display: flex;
+  margin: 0 0 15px 0;
+}
+
+.notification-settings__content {
+  width: 490px;
+  color: #686869;
+  font-size: 14px;
+}
+
+.notification-settings__description {
+  margin: 0;
+}
+
+.notification-settings__fields {
+  margin: 20px 0 0 0;
+}
+
+.notification-settings__caption {
+  cursor: pointer;
+  color: #000;
+  font-size: 15px;
+  font-weight: 600;
+  margin: 0 0 20px 0;
+}
+
+.notification-settings__field {
+  border-bottom: 1px solid rgb(225, 225, 227);
+  display: flex;
+  justify-content: space-between;
+  padding: 0 0 15px 0;
+  margin: 0 0 15px 0;
+  font-size: 15px;
+  width: 370px;
+  align-items: center;
+  display: flex;
+}
+
+.notification-settings__radio {
+  margin: 0 10px 0 0;
+  width: 120px;
+}
+
+.input-radio {
+  display: inline-block;
+  margin: 0 4px 0 0;
+}
+
+.label-radio {
+  display: inline-block;
+  font-size: 14px;
+  margin: 0;
+  font-weight: 400;
+  color: #000;
+  width: 90px;
+}
+
+.bottom {
+  display: flex;
+}
+
+.bottom__heading {
+  width: 270px;
+}
+
+.bottom__body {
+  width: 490px;
+}
+
+button {
+  font-size: 13px;
+  background-color: #2dc574;
+  color: #fff;
+  height: 43px;
+  border: 1px solid transparent;
+  outline: none;
+  border-radius: 4px;
+  font-family: Montserrat, Helvetica, Arial, sans-serif;
+  cursor: pointer;
+  font-weight: 600;
+  text-align: center;
+  transition: all 0.3s;
+  width: 100%;
+}
+
+button:hover {
+  background-color: #26a763;
 }
