--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -11,11 +11,16 @@ body {
   line-height: 1.5;
   background: #fff;
   height: 100%;
+  padding: 20px;
 }
 
 .container {
+  display: flex;
+  justify-content: center;
+}
+
+.container__content {
   max-width: 1920px;
-  padding: 20px 15px 0 15px;
 }
 
 .account {
@@ -171,4 +176,13 @@ button {
 
 button:hover {
   background-color: #26a763;
+}
+
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  display: block;
 }
